Fix input label styling
If a user has added input, the input makeshift placeholder (label) is
hidden by turning transparent. The placeholder then reaapers when the
input is removed completely.

--- a/style.css
+++ b/style.css
@@ -212,6 +212,10 @@ input:focus {
 .row:focus-within label {
     transform: translate(0, -20px) scale(0.8);
     color: #000;
-  }
+}
+
+label.input-present {
+    color: transparent;
+}
 
 
